[admin:Purchase-order] CRUD module

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,52 +1,54 @@
 {
     "/js/modules/manifest.js": "/js/modules/manifest.js?id=6a4eb117ddc7ca47286f",
     "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=302ad5dc81a77672af41",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=3e5b39279f5ed9d31235",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=ce002bf1c75f1564c4eb",
     "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=97eb6b3a941df047086d",
     "/js/modules/access.min.js": "/js/modules/access.min.js?id=364ce9b695a1f712fa51",
-    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=8e97302187ebcfee8fef",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=1bf16606b7cf0f7928db",
     "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=7e6eaebf71f28d0c7bf3",
-    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=93fe42cce08c61ef808d",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=a17e3403a48126feadb6",
     "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=93ec726b47aa6f502b4b",
-    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=d2b9ac6d51c27cb5af1f",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=b9ad948b295f1b2315e8",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=36d1a5d3f76403ae20ff",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=fd96c43627777350ee60",
     "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=1200ebd8a3fa3028b4e9",
     "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=efd7e0b48798c8a2c644",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=899eca035ff062d5996f",
     "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=8d118988c3daa40301ae",
     "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=faabf22708fd24802f6f",
     "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=c4d47fcf4ec4d65b3b27",
-    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=68d2378c13703a23d85e",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=fe16036549bf7123f501",
     "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=5baaa688a912c79393d9",
-    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=3784089f2d617e609135",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=a5b83a84837af7301463",
     "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=fdcda28865f9506fc721",
     "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=cd6dd8f8cfa4139da309",
     "/js/modules/module.min.js": "/js/modules/module.min.js?id=6e373500f58e92639583",
-    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=2e7801a2bbadc142df82",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=2c1a321ead57dbf5270c",
     "/js/modules/page.min.js": "/js/modules/page.min.js?id=da452ed9598db348b048",
-    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=a8b893ffefa1433582f1",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=98d2671f57faf972985f",
     "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=35713823d9cd06b3660a",
     "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=cbaaba002073bea4f002",
     "/js/modules/products.min.js": "/js/modules/products.min.js?id=ef4be9655044deb18dee",
     "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=246f10ad05190b588ac2",
     "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=0948e3fde2fc8fb9c12c",
-    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=944e5ca36ee482e1eac7",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=41ac8f56411c7fe1b4d0",
     "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=b49eb0b920f5f1821772",
     "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=30874a37fa781b9d74ad",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=a012da76be186309d6bf",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=4f83f581ddac7b2ca6b0",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=47fa605e8f556d21361f",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=490c7fd5f7758bdd2575",
     "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=85cd097ddabd11160b19",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=5e56c61530c3d4537f8f",
-    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=207fd014e9d857d5d318",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=d34d2700de41c59b36b2",
-    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=762a1e3849e675ca9f56",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=1444a86c417d121216e3",
-    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=2e4521272842f73acaf0",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=89fcecf2b7ed29343912",
-    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=60063293df53b1938dd7",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=2bb8f87c15f6d611b0cf",
-    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=31198366db0b68fe410e",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=e7528823779474a34ce7",
-    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=0939b6c36741537f676c",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=fab8a994e1421f9636d1",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=91f3c446d7e5fb5f8e91",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=3885cbe27941c5c47577",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=3249942dc8e654df29e2",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=397a30acbc0a80058a65",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=e1a8a843fdd33ab89ce7",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=98c049f24c88e28e50aa",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=a2f06aa2c0a59fbc6095",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=1d2b8fd8bf79218bc9ec",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=03b7c9d5d43021a67ff8",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=7c21d45c3e76964fa09b",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=ae3edd042c913e350364",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
