[admin:Purchase] CRUD module

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,54 +1,56 @@
 {
     "/js/modules/manifest.js": "/js/modules/manifest.js?id=6a4eb117ddc7ca47286f",
     "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=302ad5dc81a77672af41",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=ce002bf1c75f1564c4eb",
-    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=97eb6b3a941df047086d",
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=364ce9b695a1f712fa51",
-    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=1bf16606b7cf0f7928db",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=7e6eaebf71f28d0c7bf3",
-    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=a17e3403a48126feadb6",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=93ec726b47aa6f502b4b",
-    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=36d1a5d3f76403ae20ff",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=fd96c43627777350ee60",
-    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=1200ebd8a3fa3028b4e9",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=efd7e0b48798c8a2c644",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=9291224d8ee48d9197b3",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=bd399c128735602d4bf5",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=0869e3d16eb14d570710",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=cebfd91aa01f659b30e7",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=29c9b1c95a404d546eb3",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=526f36544932ebb48628",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=c71cfe85db26eb0127a6",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=efc8e14e509ed608b985",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=1f990153c30e0ff9e50e",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=7e005d719c643a5133ac",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=10bbda0a738885f5753d",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=899eca035ff062d5996f",
     "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=8d118988c3daa40301ae",
-    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=faabf22708fd24802f6f",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=c4d47fcf4ec4d65b3b27",
-    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=fe16036549bf7123f501",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=5baaa688a912c79393d9",
-    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=a5b83a84837af7301463",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=fdcda28865f9506fc721",
-    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=cd6dd8f8cfa4139da309",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=6e373500f58e92639583",
-    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=2c1a321ead57dbf5270c",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=da452ed9598db348b048",
-    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=98d2671f57faf972985f",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=35713823d9cd06b3660a",
-    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=cbaaba002073bea4f002",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=ef4be9655044deb18dee",
-    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=246f10ad05190b588ac2",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=0948e3fde2fc8fb9c12c",
-    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=41ac8f56411c7fe1b4d0",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=b49eb0b920f5f1821772",
-    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=30874a37fa781b9d74ad",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=4f83f581ddac7b2ca6b0",
-    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=47fa605e8f556d21361f",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=490c7fd5f7758bdd2575",
-    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=85cd097ddabd11160b19",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=fab8a994e1421f9636d1",
-    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=91f3c446d7e5fb5f8e91",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=3885cbe27941c5c47577",
-    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=3249942dc8e654df29e2",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=397a30acbc0a80058a65",
-    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=e1a8a843fdd33ab89ce7",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=98c049f24c88e28e50aa",
-    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=a2f06aa2c0a59fbc6095",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=1d2b8fd8bf79218bc9ec",
-    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=03b7c9d5d43021a67ff8",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=7c21d45c3e76964fa09b",
-    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=ae3edd042c913e350364",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=4c16123feb6cca4816b2",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=3fb1d03b6985929d6d91",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=529fed9c698d3831bc9c",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=aa0c54d3118e1c6ede9a",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=48e6a86f46c5239534e9",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=f4b76c235db1197dee0d",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=c46261256eb2b4cabc55",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=bfb28faabbe3d2fc3e39",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=d4b93961158e6a6bcb61",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=da37969770ce971b4ea8",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=75747938a1ca2fa5cfd6",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=e9acc766f9b5877d0c28",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=6fe4527f42e0a8ed3bdb",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=440ce0b02de3bbd9ab11",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=d7026aa00aff6ab3d987",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=2cbc2738982f83b5246c",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=bc5ae632f253666739ac",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=73ff0c1add6244fbebac",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=29fad6361e542f0bdf13",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=777730de8c14479638d1",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=727327d2999d05c484ca",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=0615dd34f6bc942e9a7d",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=1fd163a71ea053320838",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=e9afb6c6dc82933c9255",
+    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=4eefda93db41894357d0",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=38fc76642d27f4da3f6a",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=8b1e980f2d60c0482b12",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=24907f0e641cc7fbaf35",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=d539e54d9b4a77da077b",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=11684bfdae2fd8b892d5",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=6969a19643ee586f612e",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=cb8ef745666ecfd2de6d",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=0cd6ba01e8261087d58b",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=3440cc6620a0dd90e36a",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=7ce627917474bb354e67",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=5b3c1a50cd688c74b126",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=4ba94af3ce0da5560502",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
