--- a/admin/package.json
+++ b/admin/package.json
@@ -26,7 +26,6 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "underscore": "^1.9.1",
         "vue": "^2.5.17",
         "vue-bootstrap-datetimepicker": "^5.0.1",
         "vue-croppa": "^1.3.8",
@@ -41,7 +40,7 @@
         "select2": "^4.0.6-rc.1",
         "sweetalert": "^2.1.2",
         "vee-validate": "^2.1.0-beta.8",
-        "vue-bootstrap-typeahead": "^0.2.6",
-        "vue-select": "^2.5.1"
+        "vue-select": "^2.5.1",
+        "vuejs-auto-complete": "^0.9.0"
     }
 }
