--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=d_pintart
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
