[admin:quotation-sales] change to template mintos

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,56 +1,58 @@
 {
-    "/js/modules/manifest.js": "/js/modules/manifest.js?id=6a4eb117ddc7ca47286f",
-    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=302ad5dc81a77672af41",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=9291224d8ee48d9197b3",
-    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=bd399c128735602d4bf5",
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=0869e3d16eb14d570710",
-    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=cebfd91aa01f659b30e7",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=29c9b1c95a404d546eb3",
-    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=526f36544932ebb48628",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=c71cfe85db26eb0127a6",
-    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=efc8e14e509ed608b985",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=1f990153c30e0ff9e50e",
-    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=7e005d719c643a5133ac",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=10bbda0a738885f5753d",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=899eca035ff062d5996f",
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=d91051ea7d0c9bd1981e",
+    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=bb3cff1e383b86da59bd",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=6ccd206bf3f229e79a67",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=5f5c25e97c640fb3bb55",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=91507b38480ab43f0c9a",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=c26c6eff9ad0b09c6947",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=e22eb45a0a6b0cc23ffb",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=6b1d03eefe68794c15cb",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=303be145c7a9abdc05ee",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=9ab157b373885825f3c3",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=172d4025ffd61dfd6e49",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=b220ddcb0b1adc1589fc",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=4bd153de299477197e49",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=a17b903ed1703fe5912c",
     "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=8d118988c3daa40301ae",
-    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=4c16123feb6cca4816b2",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=3fb1d03b6985929d6d91",
-    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=529fed9c698d3831bc9c",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=aa0c54d3118e1c6ede9a",
-    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=48e6a86f46c5239534e9",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=f4b76c235db1197dee0d",
-    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=c46261256eb2b4cabc55",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=7d5f5fae3a0fc1aa1276",
-    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=6ebf91a18d04be9d404c",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=da37969770ce971b4ea8",
-    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=75747938a1ca2fa5cfd6",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=e9acc766f9b5877d0c28",
-    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=6fe4527f42e0a8ed3bdb",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=440ce0b02de3bbd9ab11",
-    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=d7026aa00aff6ab3d987",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=2cbc2738982f83b5246c",
-    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=bc5ae632f253666739ac",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=73ff0c1add6244fbebac",
-    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=29fad6361e542f0bdf13",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=777730de8c14479638d1",
-    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=727327d2999d05c484ca",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=0615dd34f6bc942e9a7d",
-    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=1fd163a71ea053320838",
-    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=d3a6f6c6b4d81955b770",
-    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=d0f6714a77425b7f9014",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=38fc76642d27f4da3f6a",
-    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=8b1e980f2d60c0482b12",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=24907f0e641cc7fbaf35",
-    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=d539e54d9b4a77da077b",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=afd0bb1550ed25ca6eed",
-    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=a9bb0137231e3c2ce7d8",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=cb8ef745666ecfd2de6d",
-    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=0cd6ba01e8261087d58b",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=5de9a5b3ca1e72030c76",
-    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=f6fd35264f018d03ff24",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=5b3c1a50cd688c74b126",
-    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=4ba94af3ce0da5560502",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=9f11292e75b0d58637ae",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=781dbf9df454088f73b0",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=58368160a5d33a6525e8",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=f4c7e149119b777204b9",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=f5bdbf015a2c0893c75b",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=d017b788a443449e7d78",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=5552a7f6042dc9b62058",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=8c397ef043628f4c146b",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=d4cdb7f62719876347bd",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=40c743e54500d351b60a",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=04538ed4c21507e526b0",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=bd45760e72b15a772e86",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=cdbdec75a7728821190c",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=8ca93775053dc3310220",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=a6d47025a681ab5176a1",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=36c179790a7c98556d98",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=bacb7ffa88ada146a883",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=c97b44cb6adcc6ccf371",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=c07bc46a16ae58c438b5",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=a712575f4c435623cac5",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=e61bdde0588358dcc0df",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=8a2fb8cf2752989f468a",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=9e5b59082b0f2504a174",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=3db4d6c4333e8bc66b4b",
+    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=70a78bb77fc70e32caba",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=5aeaf968b6a9af65b421",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=e027e932f66a933d5ffe",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=88410bd2083a9f179b35",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=d2dbf8061eb5636c2ae4",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=69a467157fb6fefb3d24",
+    "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=a6be460620b28424de5b",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=20f3c6b840418b561194",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=b069a1e0c9c80c7fb0d2",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=7e5af88a769e1966ca77",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=e079a5df04d8cdc4f1d7",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=96f1aef69a1ead90ec8c",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=dc1dbf2ce129327dddf7",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=dede632a4a1fd0505228",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
