--- a/admin/package.json
+++ b/admin/package.json
@@ -10,22 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "babel-preset-stage-2": "^6.24.1",
         "bootstrap": "^4.0.0",
         "bootstrap-sass": "^3.3.7",
-        "bootstrap-vue": "^2.0.0-rc.14",
+        "bootstrap-vue": "^2.0.1",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^5.1",
+        "cross-env": "^5.2.1",
         "datatables.net-bs4": "^1.10.19",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.15",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "jquery": "^3.4.1",
+        "laravel-mix": "^4.1.4",
+        "lodash": "^4.17.15",
+        "popper.js": "^1.15.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
+        "sass": "^1.22.12",
+        "sass-loader": "^7.3.1",
         "vue": "^2.5.17",
         "vue-bootstrap-datetimepicker": "^5.0.1",
         "vue-croppa": "^1.3.8",
@@ -36,11 +36,11 @@
         "datatables": "^1.10.18",
         "gulp-cached": "^1.1.1",
         "moment": "^2.22.2",
-        "npm": "^6.9.0",
-        "select2": "^4.0.6-rc.1",
+        "npm": "^6.11.3",
+        "select2": "^4.0.10",
         "sweetalert": "^2.1.2",
-        "vee-validate": "^2.1.0-beta.8",
-        "vue-select": "^2.5.1",
+        "vee-validate": "^2.2.15",
+        "vue-select": "^2.6.4",
         "vuejs-auto-complete": "^0.9.0"
     }
 }
