--- a/admin/composer.json
+++ b/admin/composer.json
@@ -21,7 +21,8 @@
         "maatwebsite/excel": "^3.1",
         "nexmo/client": "^1.6",
         "nexmo/laravel": "^1.1",
-        "rap2hpoutre/laravel-log-viewer": "^1.0"
+        "rap2hpoutre/laravel-log-viewer": "^1.0",
+        "maximebf/debugbar": ">=1.0.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -72,5 +73,5 @@
             "@php artisan key:generate --ansi"
         ]
     }
-    
+
 }
