--- a/admin/.env.example
+++ b/admin/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ycI4130yqA0yhHAStccv21QBrwe7hVrcDvUVo9NsZGI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL="http://admin.dpintart.devel"
 
 LOG_CHANNEL=stack
 
@@ -11,10 +11,11 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=d_pintart
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
@@ -24,11 +25,18 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=dpintart.dev@gmail.com
+MAIL_PASSWORD=szhjbcrcdubuagps
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=info@dpintart.com
+MAIL_FROM_NAME="D'Pintart"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -39,7 +47,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 NAME_PROJECT = "D' PINTART - Sistema Integrado"
-NAME_COMMERCIAL_PROJECT = "D' PINTART"
+NAME_COMMERCIAL_PROJECT = "D' Pintart"
 
 GOOGLE_CLIENT_ID = "1086702478332-nbjgbhn1mpor39tob8c4vaqpa7facmba.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET_ID = "6ouCvSafvG_JF_NoAID1kNfX"
@@ -49,3 +57,5 @@ LOG_CHANNEL=daily
 
 NEXMO_KEY=1b959df7
 NEXMO_SECRET=GfdCoWiis682hgrn
+
+META_DESCRIPTION = "Sistema de gestión de procesos de fabricación de la empresa D' Pintart"
