--- a/admin/composer.json
+++ b/admin/composer.json
@@ -19,10 +19,11 @@
         "laravel/tinker": "^1.0",
         "lavary/laravel-menu": "^1.7",
         "maatwebsite/excel": "^3.1",
+        "maximebf/debugbar": ">=1.0.0",
+        "mbezhanov/faker-provider-collection": "^1.2",
         "nexmo/client": "^1.6",
         "nexmo/laravel": "^1.1",
-        "rap2hpoutre/laravel-log-viewer": "^1.0",
-        "maximebf/debugbar": ">=1.0.0"
+        "rap2hpoutre/laravel-log-viewer": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
