[admin|tool] new module

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
     "/js/modules/manifest.js": "/js/modules/manifest.js?id=d91051ea7d0c9bd1981e",
     "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=bb3cff1e383b86da59bd",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=105922878dba0c93d63a",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=0f87e92df66797a4ebf4",
     "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=5f5c25e97c640fb3bb55",
     "/js/modules/access.min.js": "/js/modules/access.min.js?id=29635588af8da2766e05",
     "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=c7c945c3fadd714e3287",
@@ -9,7 +9,7 @@
     "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=330fcf033af7f3e4f275",
     "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=d2dbfda77a26f8e002e9",
     "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=89bf309756d877555145",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=ce38cfe5ca3c40f83e05",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=847b32e6e95075a2568d",
     "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=b9454082dae76c80774e",
     "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=2572ca85b944f11e66cb",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=a17b903ed1703fe5912c",
@@ -29,31 +29,33 @@
     "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=556522baf88ca064a01f",
     "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=ef0c6c97875c297ad8e9",
     "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=e66c96a599de5059a079",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=4d9e0a1cf0ad53e6f026",
-    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=d31aa53b2210d133f0f0",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=609d937595f2ff898b69",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=c47396797204c188951c",
     "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=e4058d336e86024c908e",
     "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=dd7e1ac0fd8134ca47c3",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=94fb92945a62b790c278",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=828afcf83e5f5f48afa5",
     "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=c13109d19f20e64ea6dc",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=4fd3be0dfdb8ef4d7503",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=e9728d154aff92211567",
     "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=bc4cee772551e72c38f2",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=842cd83e56a55ed97140",
-    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=0cb9ca17bec2d4961e21",
-    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=2426e2713a6f9272eb8d",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=29c999ac7f22e0a716c4",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=e1f835dcc60dc54e109f",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=1ea1db8460001892406a",
     "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=43ada26fd01ed39430bb",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=8c3740d3592be547ac7d",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=5cb2bd1ccdd1a4222e37",
     "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=a33566e6a37c1910c6e4",
     "/js/modules/role.min.js": "/js/modules/role.min.js?id=bbb69945e714a658d5e2",
     "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=41ad9bcaf4636827b813",
-    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=7783ddaef903baf06b05",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=74e3fcc083d9e0b06b9a",
     "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
     "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=5a59af419839465d4186",
     "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=f50c832c0771907b9d83",
     "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=5447a6cbf62d8298e72b",
     "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=a1b5caa89cda06fbe70a",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=54616f6e6612ddad6227",
+    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=d46cfd53832ed9c6cca8",
+    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=2ceef7c3c16460663829",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=fcab654fb1a515eccf6e",
     "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=97dac8ca6366ab02636e",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=e4e8f71ad052e26ca4e3",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=b77584f19f9f3e952597",
     "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=6793b2092e888c479f8d",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
