--- a/admin/package.json
+++ b/admin/package.json
@@ -44,6 +44,7 @@
         "vee-validate": "^2.2.15",
         "vue-datetime": "^1.0.0-beta.11",
         "vue-select": "^2.6.4",
+        "vuedraggable": "^2.23.2",
         "vuejs-auto-complete": "^0.9.0",
         "vuex": "^3.1.2",
         "weekstart": "^1.0.1"
