--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
     "/js/modules/manifest.js": "/js/modules/manifest.js?id=d91051ea7d0c9bd1981e",
     "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=bb3cff1e383b86da59bd",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=5eee3a4bc82a3a2be671",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=d3bdeeddd9108fb2ead4",
     "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=0560ed23895251d24b9f",
     "/js/modules/access.min.js": "/js/modules/access.min.js?id=2752e9577972da0b5139",
     "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=8d5b7c092a7e56b009e0",
@@ -47,21 +47,23 @@
     "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=fcbca5f87f116950e6ec",
     "/js/modules/role.min.js": "/js/modules/role.min.js?id=ce8f101559d0d0aa613c",
     "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=21aa234f995fd9184623",
-    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=8758d8b257e9dc779eea",
+    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=f54e50a61fc00a5a73c2",
+    "/js/modules/sales-quotation.min.js.map": "/js/modules/sales-quotation.min.js.map?id=1ea85ebfe5d4bf0d7e1c",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=377192b9774bc87e9be2",
     "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
-    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=583e0a5da16921793815",
+    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=b94ca044f3441435896b",
     "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=5b17b9c5e70ffa3ca870",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=6a73a9bad455ecffd0f8",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=ff48509862d90642579a",
     "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=c92fe9ecab81524e9c70",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=aae4c4b7284921e384b7",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=13a85eb972f1cf0bbfde",
     "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=380a80cec54ce4009425",
-    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=ef8dd0aa389983665aa3",
+    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=7d6dcd7f6ee251aca315",
     "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=72c5e0ced3aa157dcd4a",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=d31d001412ee135d4b57",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=1177e564efd1c96a0688",
     "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=8e147f8c642167ef67ed",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=1cb4201dc5b55a30fd85",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=f026ccfe637bec3e0306",
     "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=0b5031359689b1b4cb58",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=7bfb87c3b4669781b2a9",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=8fb260d523af5a10a716",
     "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=73e697e2f72fd924c76b",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
