--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,68 +1,70 @@
 {
     "/js/modules/manifest.js": "/js/modules/manifest.js?id=d91051ea7d0c9bd1981e",
     "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=bb3cff1e383b86da59bd",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=9522de5ba54607f5cb1b",
-    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=7e9a90633b0c95fa312f",
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=b7435de26fd13aac98d8",
-    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=0ebc5bc46e8ac89cb8e0",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=46ab2ea5ca7e9b59d964",
-    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=1fcc7147b9d8aea32f87",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=1d01adaf4db74b4477ac",
-    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=cc1d4a26f125d534209b",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=0ee92ac76c44457a97f8",
-    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=913c51b9228d0ffd8073",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=71a3ec606a1817ec1a59",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=d3bdeeddd9108fb2ead4",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=0560ed23895251d24b9f",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=2752e9577972da0b5139",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=8d5b7c092a7e56b009e0",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=acb8107edd6c143e5009",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=44db4b708f7cf3536e89",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=3e683aa37b9dc17fbd0b",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=400faebb5e557b527c4b",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=d94440e60ebe80cdf154",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=46297272861b9e46a692",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=180403186c84c3b0fd7e",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=899eca035ff062d5996f",
     "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=5a70a3d903f4ddb25b39",
-    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=59e08014aafd25a3b631",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=9e1eea92578ac3f74c60",
-    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=77dd52db51bb3e947b26",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=40f7a263bd1568d37146",
-    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=88ca33a3a6ac42eb08c3",
-    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=3ccf3bd2287d0161c941",
-    "/js/modules/input-order.min.js.map": "/js/modules/input-order.min.js.map?id=834c6c4e186be093b700",
-    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=a3b24fbef5b4664bb6a6",
-    "/js/modules/list-materials.min.js.map": "/js/modules/list-materials.min.js.map?id=8cb64666e086cd5273be",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=d2b5145be474d773ba87",
-    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=04c7147606330a9a0419",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=2e023fe4772033aae835",
-    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=a4e16d883722fa66920e",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=6095858452b6e62fec07",
-    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=5217b239b92ee2ec05d6",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=9dc337fd57f5de4ca822",
-    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=828f75b6c288818a00ff",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=9ad6517e5de10911aac4",
-    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=d77db05d83e2ffcbaac6",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=114138fc85a770cbf7d9",
-    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=cc7ddf01c7b5cac4f319",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=3fb5625cd2adf673dc11",
-    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=747a0cc50c0735f9044c",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=021029ebaed1ab915e04",
-    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=f17393d14ae5bd24ef44",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=69a79c10d15c5591c674",
-    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=05a581b7c240c69b7f85",
-    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=e391e1a54c031aba45a8",
-    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=ce65a5a33bfbfad24197",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=14cd67284c9792556b6e",
-    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=2b52efd49981f1cde4a7",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=ad1a74dc5350dbe7f0a1",
-    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=c3e4ad53920d8feadd4e",
-    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=8758d8b257e9dc779eea",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=982c81dc2792bdacb332",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=b780d471b01d611e677d",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=c5671d456a20a3954bf8",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=c9689694a4c4f7f240f0",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=a3b165113232a0f75d90",
+    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=5e7d7831028e0b2752a7",
+    "/js/modules/input-order.min.js.map": "/js/modules/input-order.min.js.map?id=05f4781336f535f7f584",
+    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=e11606488de17d572967",
+    "/js/modules/list-materials.min.js.map": "/js/modules/list-materials.min.js.map?id=466db5a80863375f845a",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=58f2041957b501dff139",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=0cdc4deae6cc1a8fbbf1",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=8d02983ef704f1cbb52a",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=5cf88f8608764bd4209b",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=881dbe6d0e1bf3ed51a5",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=43f426c71be78218d56d",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=e8aef5439d27bc27b98c",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=57af0d78883802f85c26",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=56acfecb2932a61424e5",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=f786bb6f660a68d3d027",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=d4e6f852f989528697aa",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=5f530f0e1cc9d869c16f",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=df16b1478ef0be415ac3",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=78d1e18518347088890d",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=d5bbfa37c132216249db",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=d817f2843c7caf0a3178",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=bc5d9ab9cf6edead840c",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=1963f194094bb9a0a3e2",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=73211512f8a2ad00388f",
+    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=5096494b690b1ee16264",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=bc0cdab3fad1f1c45d16",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=fcbca5f87f116950e6ec",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=26bf3849d974c3a30ca8",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=e4d8b058bd00a186a9ac",
+    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=3df4e1602948ef941dfe",
+    "/js/modules/sales-quotation.min.js.map": "/js/modules/sales-quotation.min.js.map?id=3f3330c352c2a7a2abae",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=377192b9774bc87e9be2",
     "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
-    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=d47ad76bee01fd636e42",
-    "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=a5608a305d746f01552e",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=a2ee49eb9b5c65450160",
-    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=f3e32bdfc28f402772ee",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=5ddac6d2e48210111115",
-    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=d4a9605b2343f017909f",
-    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=0a150acd01a76723b446",
-    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=8ff83ef4475b713d10dd",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=3ff3acc3a45752651821",
-    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=b0a144455fa8f9b2edb0",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=308e06ab3d3510833471",
-    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=8a1b45df860cff9b366f",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=d25e39c51a5d23277996",
-    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=fb067d350300122c04ea",
+    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=2784c51fb32b6d459404",
+    "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=71241a3be8756272512a",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=cda860915ece609760dc",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=7c46bed6d2727317385b",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=13a85eb972f1cf0bbfde",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=380a80cec54ce4009425",
+    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=7d6dcd7f6ee251aca315",
+    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=72c5e0ced3aa157dcd4a",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=677f143623c659749f35",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=45136023ccc8fd1635c8",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=f026ccfe637bec3e0306",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=0b5031359689b1b4cb58",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=b1f00d378fc13c84590b",
+    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=f2613155144c66a6a480",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
     "/images/logo.png": "/images/logo.png?id=e140dca63402836e3f75",
@@ -74,5 +76,7 @@
     "/images/placeholder-upload.png": "/images/placeholder-upload.png?id=b523b736304894e7e604",
     "/images/marca_agua.png": "/images/marca_agua.png?id=fd8985ea51a945b80b60",
     "/images/generic.png": "/images/generic.png?id=884901f06470a43c6774",
+    "/images/login-carpinteria.jpg": "/images/login-carpinteria.jpg?id=9d0d174782956e8cdd76",
+    "/images/login-carpinteria-second.jpg": "/images/login-carpinteria-second.jpg?id=23dd863ee026ff7c9a87",
     "/js/login-colaborator.min.js": "/js/login-colaborator.min.js?id=ff28e8e85e8d0cbe6f7c"
 }
