--- a/admin/package.json
+++ b/admin/package.json
@@ -43,6 +43,7 @@
         "sweetalert": "^2.1.2",
         "vee-validate": "^2.2.15",
         "vue-datetime": "^1.0.0-beta.11",
+        "vue-pdf": "^4.0.7",
         "vue-select": "^2.6.4",
         "vuedraggable": "^2.23.2",
         "vuejs-auto-complete": "^0.9.0",
