--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,39 +1,72 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=1cb2203e95db44e65f56",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=f9d3939af32d8d29af4a",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=9e0a27bc00807af24d79",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=c5bccbd1cc316cda94bd",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=f10f65919298558f66c5",
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=8b9d1c425df480fd4a15",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=d41d8cd98f00b204e980",
     "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=d41d8cd98f00b204e980",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=55cc1a5b9454fe7460d1",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=d06140c893ee52063b1c",
-    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=8f507f55f4053b5e5d95",
-    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=fd51f2c660f07a2508a9",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=d2c5896a89b88921b12a",
-    "/js/modules/manifest.js": "/js/modules/manifest.js?id=23807e1fe9586e68c27a",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=391c50240530ff138963",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=fab26e7896fb8b92b4b2",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=a45fca12747c6b2cf9ec",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=e51eaabf1945bf2ebeeb",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=3e6f5e9fe0a6bf2aeee0",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=c722181f190d2d2ff1a5",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=fedbbef5042d18d42e91",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=b1c5b8629c786a0445a4",
-    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=c8ccc74444059fd9aabb",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=9c643e8b233a1f6d2e3e",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=ee47df918b0f010098e7",
-    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=b5c4fa4b0f1642508f88",
-    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=4f5e0eb1561292670e4b",
-    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=45935d9614fa2fd2d777",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=a508168b109e010bd3aa",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=16ff702e2bbc72b92279",
-    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=630033f62fd11d869c14",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=5ef70d47f8244a092091",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=3ec9063ba5b1eb28aeb1",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=b63bc499413176f58cf8",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=643115178b8ad0abed0c",
-    "/vendors~pdfjsWorker.js": "/vendors~pdfjsWorker.js?id=4a4cc929b6b70087f47e",
+    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=117ad95737e097ed839c",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=d7128b9e92faa7d03d97",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=5f5c25e97c640fb3bb55",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=ea29057ff1702ba5a4fb",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=0a24085cff539fcbbb7a",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=80c698bdb53192630593",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=f3c26474bc14c34f2a8e",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=1312dc16ce089ea44d75",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=860ca919a8d6916480ab",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=5f6726b16f4ae8293ce5",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=ecb0c14692b74ca58eea",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=9d54b84660f7ad3c92bb",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=5301c6a2d71990f8b608",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=1947782a08c05f89f86d",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=238745645c234e64b294",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=3ed2cd0fbe6037822b09",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=26a4159c71fdb2cdbf07",
+    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=6ce4e5d064233ed89fcd",
+    "/js/modules/input-order.min.js.map": "/js/modules/input-order.min.js.map?id=3117e2d4add90040444f",
+    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=f2988b7309b2603861ef",
+    "/js/modules/list-materials.min.js.map": "/js/modules/list-materials.min.js.map?id=e952be9f623c8e745e34",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=d9b4ab7483a8860400be",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=e0d8e143bb765e45d7d2",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=dea23a7bf86211573c76",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=6844af8f342fa4695b36",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=d199aed64c0dc4a051f0",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=d8b5249d4ecd86897551",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=b499962dbb728fb83ba2",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=367f256de812c7df9e45",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=ad82c647ab5d5ca4a18f",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=32d4d37f078dbaf08fea",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=45668c0f8b51cda4d141",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=77e8994f68cf84be023f",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=d5b1af95e0075cd95d20",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=5ee4ce3a8d1f7c191aec",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=86211050a9d15b1e3cee",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=17eafa86babdf3e814d0",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=d162d3d8c518897f92dc",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=58c332f064cd62176716",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=7ca38c3ca24217ce8fcf",
+    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=7de2049a043367a7d5e7",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=2bedac3c861186a4ef23",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=416dde2ba3b41e6ecd4a",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=2428509835dcf1e6899a",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=5dd8bb0bdd99d14e596b",
+    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=b726caee75df6004a2bd",
+    "/js/modules/sales-quotation.min.js.map": "/js/modules/sales-quotation.min.js.map?id=729600c888ae55014ec0",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=377192b9774bc87e9be2",
+    "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
+    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=2f780736c17bbea184a7",
+    "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=f60396a20c6309f1b3ff",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=b9b3c924e82afedd48ba",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=2c1a62612df90a0e5768",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=e1677bf9d20616659444",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=9143b365c80d2f901181",
+    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=312008b1b374bf8d6110",
+    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=c67bdc91a09ffed2ee28",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=c86176391b767f8b147b",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=d400cd57185c7800a71c",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=a87e7391a41a22fa034f",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=edcd4edd217c6168c9bb",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=d9d3ea6e4d98e40a3a52",
+    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=1d10fe4156f3c9b119bf",
+    "/vendors~pdfjsWorker.js": "/vendors~pdfjsWorker.js?id=acee938157df76f618b4",
+    "/vendors~pdfjsWorker.js.map": "/vendors~pdfjsWorker.js.map?id=4fb349cb46e4bcd04f2e",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
     "/images/logo.png": "/images/logo.png?id=e140dca63402836e3f75",
