--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,51 +1,36 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=dd9914d87b34a0a5e4dc",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=4bab669e6aa9f17b48c5",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=3945f18a7baaa0cbe8c3",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=088047c4806cb0bcb98e",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=f0e2e78c54d65a36f307",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=17c4052706857daab9ef",
-    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=ac5014915acd09b65fa8",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=4ba435d2458dc0f25b62",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=0d6c343930ad7bd0fb86",
-    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=e3678e8571d54e0547ef",
-    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=9d7835b4203d477b32fc",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=461fc1652ad920184b4b",
-    "/js/modules/manifest.js": "/js/modules/manifest.js?id=6498d37a7e665f775faf",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=e00ade0f5df1cf085a7a",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=27843a4b1db9417ea109",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=b0c139dc75fc691d03b6",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=da6ab422448bedb0acc5",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=ea9467d11fd265e3d866",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=9f20eccdc9daca571f0b",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=247e11812fdbde8159f1",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=f61e09c67edf0a2772c8",
-    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=8a34cce83197d4a19088",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=e3b8e7a85dafc6bcfc5d",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=48b056ef16a488f1e91d",
-    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=981f297a6799c7806840",
-    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=2ba209a649f13e4231dc",
-    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=c23be8d05c72bfed10a5",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=205ee329eb170b674a86",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=a338a315852d6ee4a962",
-    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=f29142f31985208321c5",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=311d752a17a6b84c2cef",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=30976787ce72c105791f",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=b2c548ebff993c6914d8",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=7f71f2afc99bf5b7c7d4",
-    "/vendors~pdfjsWorker.js": "/vendors~pdfjsWorker.js?id=4a4cc929b6b70087f47e",
-    "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
-    "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
-    "/images/logo.png": "/images/logo.png?id=e140dca63402836e3f75",
-    "/images/cover-page-default.jpg": "/images/cover-page-default.jpg?id=c761bbbfff71b78863e9",
-    "/images/user-default.jpg": "/images/user-default.jpg?id=9396d9f41a14604bf42e",
-    "/images/project-4.jpg": "/images/project-4.jpg?id=88e13cc250031548daea",
-    "/images/favicon.ico": "/images/favicon.ico?id=6ab725445cde24dfb6b3",
-    "/images/not-image-product.png": "/images/not-image-product.png?id=d2c815eceb07f0817879",
-    "/images/placeholder-upload.png": "/images/placeholder-upload.png?id=b523b736304894e7e604",
-    "/images/marca_agua.png": "/images/marca_agua.png?id=fd8985ea51a945b80b60",
-    "/images/generic.png": "/images/generic.png?id=884901f06470a43c6774",
-    "/images/login-carpinteria.jpg": "/images/login-carpinteria.jpg?id=9d0d174782956e8cdd76",
-    "/images/login-carpinteria-second.jpg": "/images/login-carpinteria-second.jpg?id=23dd863ee026ff7c9a87",
-    "/js/login-colaborator.min.js": "/js/login-colaborator.min.js?id=ff28e8e85e8d0cbe6f7c"
+    "/js/modules/access.min.js": "/js/modules/access.min.js",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css",
+    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js",
+    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js",
+    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js",
+    "/js/modules/manifest.js": "/js/modules/manifest.js",
+    "/js/modules/module.min.js": "/js/modules/module.min.js",
+    "/js/modules/page.min.js": "/js/modules/page.min.js",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js",
+    "/js/modules/products.min.js": "/js/modules/products.min.js",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js",
+    "/js/modules/role.min.js": "/js/modules/role.min.js",
+    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js",
+    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js",
+    "/js/modules/tool.min.js": "/js/modules/tool.min.js",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js",
+    "/js/modules/user.min.js": "/js/modules/user.min.js",
+    "/js/modules/vendor.js": "/js/modules/vendor.js",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js"
 }
