[admin] enhancement product's module

--- a/admin/.env.example
+++ b/admin/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:ycI4130yqA0yhHAStccv21QBrwe7hVrcDvUVo9NsZGI=
 APP_DEBUG=true
 APP_URL="http://admin.dpintart.devel"
+APP_URL_WEB="http://www.dpintart.devel"
 
 LOG_CHANNEL=stack
 
